--- a/src/components/Editor/index.module.less
+++ b/src/components/Editor/index.module.less
@@ -9,6 +9,9 @@
         .ce-block__content,.ce-toolbar__content {
             margin-left: 0 !important;
         }
+        .ce-block__content {
+            max-width: 100% !important;
+        }
         .ce-inline-tool--link svg  {
             display: none;
         }
