--- a/src/pc/Signup/index.module.less
+++ b/src/pc/Signup/index.module.less
@@ -11,12 +11,12 @@
 }
 .notice {
   height: 18px;
-  font-family: "Maven Pro";
+  font-family: 'Maven Pro';
   text-align: right;
   font-style: normal;
   font-size: 14px;
   color: rgba(37, 190, 34, 0.6);
-  cursor: not-allowed; 
+  cursor: not-allowed;
   display: flex;
   align-items: center;
 }
@@ -35,7 +35,49 @@
   cursor: pointer;
   transition: all 0.4s ease-in-out;
   &:hover {
-    color:#fff;
+    color: #fff;
     background: rgba(37, 190, 34);
   }
+}
+
+.button_green_signup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 8 10px;
+  line-height: 16px;
+  color: #000;
+  height: 40px;
+  width: 130px;
+  font-size: 16px;
+  border: 1px solid #25be22e5;
+  border-radius: 20px;
+  background: rgba(37, 190, 34, 0.1);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 3px 3px 2px 0px rgba(37, 190, 34, 0.9);
+}
+.button_green_signup:hover {
+  background: rgba(37, 190, 34, 0.6);
+}
+
+.button_grey_signup {
+  display: flex;
+  align-items: center;
+  padding: 8 25px;
+  color: #000;
+  height: 40px;
+  font-size: 16px;
+  border: 1px solid #888888e5;
+  border-radius: 20px;
+  background: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 3px 3px 2px 0px rgba(136, 136, 136, 0.6);
+}
+.button_grey_signup:hover {
+  background: rgba(136, 136, 136, 0.3);
 }
