--- a/src/pc/cascad/CascadPieceIndex/G6/index.module.less
+++ b/src/pc/cascad/CascadPieceIndex/G6/index.module.less
@@ -4,9 +4,13 @@
       display: flex;
       position: relative;
       margin: 30px;
+      // padding: 20px;
       margin-top: 60px;
-      padding: 0px;
+      padding: 0 10px;
       flex-direction: column;
+      background-color: rgba(255, 255, 255, 0.8);
+      border-radius: 6px;
+      user-select: none;
     }
     ul.graphin-components-legend-content li.item {
       display: inline-block;
