--- a/src/pc/cascad/Writing/Inspired/InspiredComponent/DebounceSelect/index.module.less
+++ b/src/pc/cascad/Writing/Inspired/InspiredComponent/DebounceSelect/index.module.less
@@ -10,3 +10,16 @@
      
     }
 }
+.select {
+    :global {
+        .ant-select-selector {
+            border-color: #5E5E5E !important;
+        }
+        .ant-select-arrow {
+            right: 28px !important;
+        }
+        .ant-select-selection-search-input {
+            height: 42px !important;
+        }
+    }
+}
