--- a/src/pc/cascad/Writing/Inspired/InspiredComponent/index.module.less
+++ b/src/pc/cascad/Writing/Inspired/InspiredComponent/index.module.less
@@ -17,3 +17,13 @@
       
     }
   }
+  .input {
+    :global {
+        .ant-input {
+            font-size: 20px;
+            font-weight: 600;
+            color: #25BE22E5;
+            text-align: right;
+        }
+    }
+  }
