--- a/src/assets/css/components.less
+++ b/src/assets/css/components.less
@@ -53,17 +53,17 @@
 .button-yellow {
   display: flex;
   align-items: center;
-  padding: 0 15px;
+  padding: 0 40px;
   color: #231f20;
-  height: 39px;
-  border: 1px solid rgba(240, 231, 6, 1);
+  height: 48px;
+  border: 1px solid #f0e706;
   border-radius: 20px;
-  background: rgba(240, 231, 6, 0.1);
+  background: rgba(249, 242, 186, 0.25);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-  box-shadow: 3px 3px 2px 0px rgba(240, 231, 6, 1);
-  user-select: none;
+  box-shadow: 3px 3px 2px 0px #f0e706;
 }
+
 .button-yellow:hover {
   background: rgba(240, 231, 6, 0.6);
 }
@@ -86,18 +86,22 @@
   background: rgba(136, 136, 136, 0.6);
 }
 
-.button-yellow {
+.button-white {
   display: flex;
   align-items: center;
   padding: 0 40px;
   color: #231f20;
   height: 48px;
-  border: 1px solid #f0e706;
+  font-size: 20px;
+  border: 1px solid #88888899;
   border-radius: 20px;
-  background: rgba(249, 242, 186, 0.25);
+  background: rgba(255, 255, 255, 1);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-  box-shadow: 3px 3px 2px 0px #f0e706;
+  box-shadow: 3px 3px 2px 0px rgba(136, 136, 136, 0.6);
+}
+.button-white:hover {
+  background: rgba(136, 136, 136, 0.3);
 }
 
 .ant-message {
@@ -193,4 +197,40 @@
   border: 3px solid transparent;
   background-image: linear-gradient(to right, #d9d9d9, #d9d9d9),
     linear-gradient(90deg, #8042f2, #84ce9c);
+}
+
+.button-grey-bg-white {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  color: #231f20;
+  height: 33px;
+  font-size: 20px;
+  border: 1px solid #88888899;
+  border-radius: 20px;
+  background: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 3px 3px 2px 0px rgba(136, 136, 136, 1);
+}
+.button-grey-bg-white:hover {
+  background: rgba(136, 136, 136, 0.1);
+}
+
+.button-pink-bg-white {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  color: #231f20;
+  height: 33px;
+  font-size: 20px;
+  border: 1px solid #FFCFCFB2;
+  border-radius: 20px;
+  background: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 3px 3px 2px 0px rgba(255, 207, 207, 1);
+}
+.button-pink-bg-white:hover {
+  background: rgba(255, 207, 207, 0.1);
 }
