--- a/src/pc/cascad/Writing/index.module.less
+++ b/src/pc/cascad/Writing/index.module.less
@@ -1,4 +1,3 @@
-
 .buttonSaveDraft {
   border: 1px solid rgba(136, 136, 136, 0.6);
   filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.25));
@@ -21,6 +20,10 @@
   border: none;
   background-color: transparent;
   outline: none;
+  color: #5e5e5e;
+}
+.titleInput::placeholder {
+  color: #5e5e5e;
 }
 .subTitleInput {
   width: calc(100% - 24px);
@@ -33,6 +36,9 @@
   background-color: transparent;
   outline: none;
 }
+.subTitleInput::placeholder {
+  color: #5e5e5e;
+}
 .addImageContainer {
   display: flex;
   align-items: center;
@@ -44,14 +50,11 @@
   filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.25));
   border-radius: 40px;
 }
-.addImageText {
-  font-size: 20px;
-  font-weight: 500;
-  opacity: 0.6;
-}
 .coverImage {
-  max-width: 650px;
+  // max-width: 650px;
   /* height: 250px; */
+  height: 150px;
+  width: 150px;
   margin-top: 20px;
 }
 .inspiredContainer {
